GC does not appear to work, adding args from server